<resources>
    <string name="app_name">Copy Copy Pro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_message_here">Type your message here...</string>
    <string name="coppied">Copied!</string>
    <string name="message">Message</string>
    <string name="register">Register</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="already_registed_login_me">Already registed. Login me!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_enter_email">"Please enter your email! "</string>
    <string name="enter_pass">"Please enter your password! "</string>
    <string name="missing_data">Missing data</string>
    <string name="pass_incorrectly">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failt">Authentication failed</string>
    <string name="emaill_incorrectly">Email is invalid, please enter your email then try again!</string>
    <string name="repassword">Re-password</string>
    <string name="repass_incorrectly">Passwords do not match.</string>
    <string name="login">Login</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email id to send your password reset introductions.</string>
    <string name="reset">Reset Password</string>
    <string name="back_to_login"><![CDATA[<< Back]]></string>
    <string name="success">Successful</string>
    <string name="sent_email">We have sent you instructions to reset your password!</string>
    <string name="add_favourite">Added to Favourite</string>

    <string name="code_user_setting" format="false">Code: %s</string>
    <string name="please_enter_your_code_to_the_computer_to_complete_the_connection">Please enter your code to the computer to complete the connection.</string>
    <string name="active">Copy Copy Pro is Active</string>
    <string name="connect_to_computer">Connect to Computer</string>
    <string name="how_to_connect_to_computer">How to Connect to Computer</string>
    <string name="night_mode_scheule">Night mode scheule</string>
    <string name="auto">Auto</string>
    <string name="search_for_any_message">Search for any message</string>
    <string name="not_a_member_get_registered_now">Not a member? Get registered now!</string>
    <string name="rate_copy_copy_on_play_store">Rate Copy Copy Pro on Play Store</string>
    <string name="your_5_star_rating_and_google_1_are_appreciated">Your 5-star rating and Google +1 are appreciated.</string>
    <string name="contact_developer">Contact developer</string>
    <string name="problem_question_drop_me_an_email_at_duongkk_dev_gmail_com">Problem? Question? Drop me an email at duongkk.dev@gmail.com</string>
    <string name="more_apps">More apps</string>
    <string name="if_you_like_this_app_you_may_want_to_check_out_my_other_apps">If you like this app you may want to check out my other apps.</string>
    <string name="log_out">Log out</string>
    <string name="delete_all_text_from_history">Delete all text from history</string>
    <string name="delete_history">Delete history</string>
    <string name="show_status_bar_icon_when_copy_copy_is_active">Show status bar icon when Copy Copy Pro Pro is active</string>
    <string name="notify_when_active">Notify when active</string>
    <string name="copy_copy_is_active">Copy Copy Pro is active</string>
    <string name="things_you_share_will_appear_here">Things you share will appear here</string>
    <string name="nothing_shared">Nothing shared</string>
    <string name="copy_copy_is_off">Copy Copy Pro is off</string>
    <string name="off">TURN OFF</string>
    <string name="deleted">Deleted!</string>
    <string name="success_reg">Register successfull. Please login to use service!</string>
    <string name="right">Permission was not accepted. Please accept permission then try again!</string>
    <string name="check_connect">Please check your connection then try again!</string>
    <string name="tip"> *You can download the rest of the clients at: \n http://copycopy.16mb.com</string>
    <string name="more_item">↓ Last message</string>
    <string name="notify_when_copied">Notify when copying</string>
    <string name="enabled_notification_copying">Enabled notification when copying text</string>
    <string name="notification_copied">Copied message : %s</string>
    <string name="remove_ads_more_theme_style"><![CDATA[Remove Ads]]></string>
    <string name="upgrade_pro_version">Upgrade pro version</string>
    <string name="title_update">New Update</string>
    <string name="msg_update"><![CDATA[ * Add notification when copying text option\n
                                                                            * Add upgrade pro version option\n* Increase performance & fix issues]]>
                                                         </string>
    <string name="dimiss">Dismiss</string>
    <string name="msg_exist_same_app">It looks like you are using a similar Copy Copy  application. Please uninstall the old app to continue signing in</string>
    <string name="error">The same applications exist !</string>
    <array name="item_noti">
        <item name="turn_off">Turn Off</item>
        <item name="alert">Show alert message</item>
        <item name="fav">Show notification on status bar</item>
    </array>
    <array name="item_long_click">
        <item name="copy">Copy Text</item>
        <item name="share">Share Text</item>
        <item name="fav">Add to favourite</item>
        <item name="delete">Delete</item>
    </array>
    <array name="item_long_click_fav">
        <item name="copy">Copy Text</item>
        <item name="share">Share Text</item>
        <item name="delete">Delete</item>
    </array>

    <array name="item_long_click_search">
        <item name="copy">Copy Text</item>
        <item name="share">Share Text</item>
        <item name="fav">Add to favourite</item>
    </array>

    <array name="item_theme">
        <item name="auto">Auto</item>
        <item name="light">Always Light</item>
        <item name="dark">Always Dark</item>
        <item name="follow_system">Follows System</item>
    </array>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="permission">Permission Alert</string>
</resources>
