<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    android:fitsSystemWindows="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.duongkk.clipboardcopy.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginBottom="30dp"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:text="@string/app_name"-->
            <!--android:textSize="35sp"-->
            <!--android:typeface="sans"-->
            <!--android:fontFamily="sans-serif-light"-->
            <!--android:textAllCaps="true"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:src="@mipmap/ic_launcher" />-->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textSize="35sp"
                android:scaleType="fitXY"
                android:typeface="sans"
                android:fontFamily="sans-serif-light"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:src="@mipmap/ic_launcher"
                android:focusable="true"
                android:focusableInTouchMode="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/lbl_forgot_password"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/forgot_password_msg"
                android:textColor="@android:color/white"
                android:textSize="14dp" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@color/accent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="nomal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/accent"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_reg"
                style="?android:textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:onClick="onClick"
                android:text="@string/reset"
                android:layout_marginTop="18dp"/>
            <Button
                android:visibility="visible"
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:onClick="onClick"
                android:textColor="@color/colorAccent"

                android:text="@string/back_to_login"
                android:layout_marginTop="20dip"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:progress="0"
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                />
        </LinearLayout>
    </ScrollView>



</android.support.design.widget.CoordinatorLayout>
