<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    android:fitsSystemWindows="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.duongkk.clipboardcopy.RegisterActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginBottom="30dp"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:text="@string/app_name"-->
        <!--android:textSize="35sp"-->
        <!--android:typeface="sans"-->
        <!--android:fontFamily="sans-serif-light"-->
        <!--android:textAllCaps="true"-->
        <!--android:textColor="@color/colorAccent"-->
        <!--android:src="@mipmap/ic_launcher" />-->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:scaleType="fitXY"
            android:typeface="sans"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:src="@mipmap/ic_launcher"
            android:focusable="true"
            android:focusableInTouchMode="true" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/accent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="nomal"
                android:textColor="@color/white"
                android:textColorHint="@color/accent"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/accent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionUnspecified"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/accent"
                android:fontFamily="nomal"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_reg"
            style="?android:textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:onClick="onClick"
            android:text="@string/login"
            android:layout_marginTop="18dp"/>
        <Button
            android:visibility="visible"
            android:id="@+id/btn_resetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="onClick"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:text="@string/forgot_your_password"
            android:layout_marginTop="20dip"/>
        <Button
            android:id="@+id/btn_goto_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/white"
            android:onClick="onClick"
            android:textAllCaps="false"
            android:text="@string/not_a_member_get_registered_now"
            android:layout_marginTop="30dip"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:progress="0"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            />
    </LinearLayout>
</ScrollView>



</android.support.design.widget.CoordinatorLayout>
